Removed white background to align category header correctly

--- a/src/amo/components/CategoryHeader/styles.scss
+++ b/src/amo/components/CategoryHeader/styles.scss
@@ -3,7 +3,6 @@
 @import "~ui/css/vars";
 
 .CategoryHeader {
-  background: $white;
   border-radius: $border-radius-default;
   padding: 10px 10px 0;
   width: 100%;
